readable code, more comments, fixed grammar

--- a/game.html
+++ b/game.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- meta data && tittle -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Name them all!</title>
+    <meta name="description" 
+    content="Can you na,e them all, this game page is where you will try to name all the pixelated animals.">
+
+    <!-- Links and scripts -->
     <link
       rel="stylesheet"
       href="./styles/style.css"
@@ -13,12 +18,12 @@
 
     <link rel="icon" href="./images/goal_15.png">
 
-    <meta name="description" 
-    content="Can you na,e them all, this game page is where you will try to name all the pixelated animals.">
+
 
   </head>
 
   <body class="page">
+    <!-- nav -->
     <nav class="site-nav">
       <ul class="site-nav__list">
         <li class="site-nav__item">
@@ -29,6 +34,8 @@
         </li>
       </ul>
     </nav>
+    
+    <!-- header -->
     <header class="header">
       <h1 class="header__title">Endangered Animals | Can You Name Them All?</h1>
     </header>
@@ -37,15 +44,13 @@
     <h2>How To Play</h2>
     <div class="intro">
       <p>
-        This is a simple quiz game where you hover over the answer you think is
-        correct with your mouse to answer the questions!
+        This is a quiz game where you use your mouse to hover over the answer you believe to be correct!  
       </p>
       <p>
-        Be careful, hovering over the wrong answer will count as a incorrect
-        guess and might lose you the game
+        Be careful, hovering over the wrong answer will count as an incorrect guess and might lead to losing the game.
       </p>
-      <p>Be careful that you are sure you're hovering over the right option!</p>
-      <p>Good luck!</p>
+      <p>Ensure that you are confident that you are hovering over the correct option!</p>
+      <p>Best of luck!</p>
     </div>
 
     <!-- ------------------ Question 1 ------------------ -->
@@ -58,6 +63,7 @@
       />
     </div>
 
+    <!-- answer alternatives for question 1 -->
     <div class="container">
       <div class="box">
         <div class="box__content">
@@ -71,6 +77,7 @@
         <div class="box__content">
           <p class="box__text">Tiger</p>
         </div>
+        <!-- Correct answer for question 1 -->
         <div class="box__answer">
           <p class="box__answer-text box__answer-text--correct">
             Correct, this is the Sunda Island tiger. Which is sadly endangered.
@@ -105,7 +112,7 @@
         class="question__image"
       />
     </div>
-
+    <!-- answer alternatives for question 2 -->
     <div class="container">
       <div class="box">
         <div class="box__content">
@@ -149,6 +156,7 @@
       />
     </div>
 
+      <!-- answer alternatives for question 3-->
     <div class="container">
       <div class="box">
         <div class="box__content"><p class="box__content-text">Panda</p></div>
@@ -192,6 +200,7 @@
       />
     </div>
 
+      <!-- answer alternatives for question 4 -->
     <div class="container">
       <div class="box box--correct">
         <div class="box__content">
