--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- meta data && tittle -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Group 8, UN goal 15</title>
+    <meta name="description"
+    content="This is groups eights page for UNs goal number 15">
+    
+    <!-- Links and scripts -->
     <link
       rel="stylesheet"
       href="./styles/style.css"
     />
-    
+
     <link rel="icon"
     href="./images/goal_15.png">
-
-    <meta name="description"
-    content="This is groups eights page for UNs goal number 15">
 
   </head>
 
   <body>
+    <!-- nav -->
     <nav class="site-nav">
       <ul class="site-nav__list">
         <li class="site-nav__item">
@@ -29,10 +32,13 @@
         </li>
       </ul>
     </nav>
+
+    <!-- header -->
     <header class="site-header">
       <h1 class="site-header__title">Sustainability Goal 15</h1>
     </header>
 
+    <!-- main -->
     <main class="site-main">
       <h2 class="site-main__subtitle">
         Welcome to our website dedicated to UN Goal 15: Life on Land
@@ -65,4 +71,5 @@
       </div>
     </main>
   </body>
+
 </html>
