grammar, main green change, nested scss.

--- a/game.html
+++ b/game.html
@@ -58,7 +58,7 @@
       <h2 class="question__title">What animal is this?</h2>
       <img
         src="images/pixelated-tiger.png"
-        alt="A picture of a tiger pixelated"
+        alt="A pixelated picture of an animal, question 1"
         class="question__image"
       />
     </div>
@@ -81,7 +81,7 @@
         <div class="box__answer">
           <p class="box__answer-text box__answer-text--correct">
             Correct, this is the Sunda Island tiger. Which is sadly endangered.
-            There is only 400 left.
+            There is around 400 left.
           </p>
         </div>
       </div>
@@ -108,7 +108,7 @@
       <h2 class="question__title">What animal is this?</h2>
       <img
         src="images/pixelated-rhino.png"
-        alt="A picture of a rhino pixelated"
+        alt="A pixelated picture of an animal, question 2"
         class="question__image"
       />
     </div>
@@ -151,7 +151,7 @@
       <h2 class="question__title">What animal is this?</h2>
       <img
         src="images/pixelated-elephant.png"
-        alt="A picture of a elephant pixelated"
+        alt="A pixelated picture of an animal, question 3"
         class="question__image"
       />
     </div>
@@ -195,7 +195,7 @@
       <h2 class="question__title">What animal is this?</h2>
       <img
         src="images/pixelated-turtle.png"
-        alt="A picture of a turtle pixelated"
+        alt="A pixelated picture of an animal, question 4"
         class="question__image"
       />
     </div>
@@ -209,7 +209,7 @@
         <div class="box__answer">
           <p class="box__answer-text box__answer-text--correct">
             Correct, this is the hawksbill turtle. A major threat to hawksbill
-            turtles is the loss of nesting habitat and coral reefs due to
+            turtles is the loss of nesting habitat and coral reefs. The cause of this is
             coastal development, rising seas from climate change, and pollution.
           </p>
         </div>
