Reworked nav(nested scss), win/lose screen

--- a/game.html
+++ b/game.html
@@ -244,7 +244,7 @@
 
     <!-- ------------------ win screen ------------------ -->
     <div class="win-screen">
-      <h1 class="win-screen__heading">You Win</h1>
+      <h1 class="win-screen__heading">You Win &#127881</h1>
       <p class="win-screen__message">
         You have answered all the questions correctly, congratulations!
       </p>
@@ -262,7 +262,7 @@
 
     <!-- ------------------ lose screen ------------------ -->
     <div class="lose-screen">
-      <h1 class="lose-screen__heading">You Lose</h1>
+      <h1 class="lose-screen__heading">You Lose &#128546</h1>
       <p class="lose-screen__message">
         You have answered 3 question wrongs, do you wanna try again?
       </p>
