Fixed game instructions to be less insecure

--- a/game.html
+++ b/game.html
@@ -47,7 +47,7 @@
         This is a quiz game where you use your mouse to hover over the answer you believe to be correct!  
       </p>
       <p>
-        Be careful, hovering over the wrong answer will count as an incorrect guess and might lead to losing the game.
+        Be careful, hovering over the wrong answer will count as an incorrect guess and will lead you to lose the game.
       </p>
       <p>Ensure that you are confident that you are hovering over the correct option!</p>
       <p>Best of luck!</p>
