made wrong answers less sad && fix inconsistencies

--- a/game.html
+++ b/game.html
@@ -70,7 +70,7 @@
           <p class="box__text">Lion</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a lion.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Lion.</span></p>
         </div>
       </div>
       <div class="box box--correct">
@@ -90,7 +90,7 @@
           <p class="box__text">Cheetah</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a cheetah.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Cheetah.</span></p>
         </div>
       </div>
       <div class="box">
@@ -98,7 +98,7 @@
           <p class="box__text">Leopard</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a leopard.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Leopard.</span></p>
         </div>
       </div>
     </div>
@@ -119,7 +119,7 @@
           <p class="box__text">Tapir</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a tapir.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Tapir.</span></p>
         </div>
       </div>
       <div class="box box--correct">
@@ -135,13 +135,13 @@
       <div class="box">
         <div class="box__content"><p>Hippo</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a hippo.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Hippo.</span></p>
         </div>
       </div>
       <div class="box">
         <div class="box__content"><p>Walrus</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a walrus.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Walrus.</span></p>
         </div>
       </div>
     </div>
@@ -161,19 +161,19 @@
       <div class="box">
         <div class="box__content"><p class="box__content-text">Panda</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a panda.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Panda.</span></p>
         </div>
       </div>
       <div class="box">
         <div class="box__content"><p class="box__content-text">Rhino</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a rhino.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Rhino.</span></p>
         </div>
       </div>
       <div class="box">
         <div class="box__content"><p class="box__content-text">Gorilla</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a gorilla.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Gorilla.</span></p>
         </div>
       </div>
       <div class="box box--correct">
@@ -220,7 +220,7 @@
           <p class="box__content-text">Tortoise</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a tortoise.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Tortoise.</span></p>
         </div>
       </div>
 
@@ -229,7 +229,7 @@
           <p class="box__content-text">Armadillo</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a armadillo.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Armadillo.</span></p>
         </div>
       </div>
       <div class="box">
@@ -237,7 +237,7 @@
           <p class="box__content-text">Terrapin</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a terrapin.</p>
+          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Terrapin.</span></p>
         </div>
       </div>
     </div>
