Added 2 more questions to the game

--- a/game.html
+++ b/game.html
@@ -6,23 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Name them all!</title>
-    <meta name="description" 
-    content="Can you na,e them all, this game page is where you will try to name all the pixelated animals.">
+    <meta
+      name="description"
+      content="Can you name them all, this game page is where you will try to name all the pixelated animals."
+    />
 
     <!-- Links and scripts -->
-    <link
-      rel="stylesheet"
-      href="./styles/style.css"
-    />
+    <link rel="stylesheet" href="./styles/style.css" />
     <script src="script.js" async></script>
 
-    <link rel="icon" href="./images/goal_15.png">
-
-
-
+    <link rel="icon" href="./images/goal_15.png" />
   </head>
 
-  <body class="page">
+  <body>
     <!-- nav -->
     <nav class="site-nav">
       <ul class="site-nav__list">
@@ -34,7 +30,7 @@
         </li>
       </ul>
     </nav>
-    
+
     <!-- header -->
     <header class="header">
       <h1 class="header__title">Endangered Animals | Can You Name Them All?</h1>
@@ -44,12 +40,17 @@
     <h2>How To Play</h2>
     <div class="intro">
       <p>
-        This is a quiz game where you use your mouse to hover over the answer you believe to be correct!  
+        This is a quiz game where you use your mouse to hover over the answer
+        you believe to be correct!
       </p>
       <p>
-        Be careful, hovering over the wrong answer will count as an incorrect guess and will lead you to lose the game.
+        Be careful, hovering over the wrong answer will count as an incorrect
+        guess and will lead you to lose the game.
       </p>
-      <p>Ensure that you are confident that you are hovering over the correct option!</p>
+      <p>
+        Ensure that you are confident that you are hovering over the correct
+        option!
+      </p>
       <p>Best of luck!</p>
     </div>
 
@@ -70,7 +71,9 @@
           <p class="box__text">Lion</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Lion.</span></p>
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Lion.</span>
+          </p>
         </div>
       </div>
       <div class="box box--correct">
@@ -90,7 +93,9 @@
           <p class="box__text">Cheetah</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Cheetah.</span></p>
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Cheetah.</span>
+          </p>
         </div>
       </div>
       <div class="box">
@@ -98,7 +103,9 @@
           <p class="box__text">Leopard</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Leopard.</span></p>
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Leopard.</span>
+          </p>
         </div>
       </div>
     </div>
@@ -119,29 +126,37 @@
           <p class="box__text">Tapir</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Tapir.</span></p>
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Tapir.</span>
+          </p>
         </div>
       </div>
       <div class="box box--correct">
         <div class="box__content"><p>Rhino</p></div>
         <div class="box__answer">
           <p class="box__answer-text box__answer-text--correct">
-            This is the Javan rhino. They have historically lived in south asia, now only remaining in Indonesia. 
-            It is critically endangered. Approximately 67 remain. WWF is working on now removing trees in the national 
-            park where they are to increase breeding rated for the mammals.
+            This is the Javan rhino. They have historically lived in south asia,
+            now only remaining in Indonesia. It is critically endangered.
+            Approximately 67 remain. WWF is working on now removing trees in the
+            national park where they are to increase breeding rated for the
+            mammals.
           </p>
         </div>
       </div>
       <div class="box">
         <div class="box__content"><p>Hippo</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Hippo.</span></p>
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Hippo.</span>
+          </p>
         </div>
       </div>
       <div class="box">
         <div class="box__content"><p>Walrus</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Walrus.</span></p>
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Walrus.</span>
+          </p>
         </div>
       </div>
     </div>
@@ -156,24 +171,30 @@
       />
     </div>
 
-      <!-- answer alternatives for question 3-->
+    <!-- answer alternatives for question 3-->
     <div class="container">
       <div class="box">
         <div class="box__content"><p class="box__content-text">Panda</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Panda.</span></p>
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Panda.</span>
+          </p>
         </div>
       </div>
       <div class="box">
         <div class="box__content"><p class="box__content-text">Rhino</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Rhino.</span></p>
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Rhino.</span>
+          </p>
         </div>
       </div>
       <div class="box">
         <div class="box__content"><p class="box__content-text">Gorilla</p></div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Gorilla.</span></p>
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Gorilla.</span>
+          </p>
         </div>
       </div>
       <div class="box box--correct">
@@ -200,7 +221,7 @@
       />
     </div>
 
-      <!-- answer alternatives for question 4 -->
+    <!-- answer alternatives for question 4 -->
     <div class="container">
       <div class="box box--correct">
         <div class="box__content">
@@ -209,8 +230,9 @@
         <div class="box__answer">
           <p class="box__answer-text box__answer-text--correct">
             Correct, this is the hawksbill turtle. A major threat to hawksbill
-            turtles is the loss of nesting habitat and coral reefs. The cause of this is
-            coastal development, rising seas from climate change, and pollution.
+            turtles is the loss of nesting habitat and coral reefs. The cause of
+            this is coastal development, rising seas from climate change, and
+            pollution.
           </p>
         </div>
       </div>
@@ -220,7 +242,9 @@
           <p class="box__content-text">Tortoise</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Tortoise.</span></p>
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Tortoise.</span>
+          </p>
         </div>
       </div>
 
@@ -229,7 +253,10 @@
           <p class="box__content-text">Armadillo</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Armadillo.</span></p>
+          <p class="box__answer-text">
+            Wrong answer, it isn't a
+            <span class="wrong-animal">Armadillo.</span>
+          </p>
         </div>
       </div>
       <div class="box">
@@ -237,14 +264,138 @@
           <p class="box__content-text">Terrapin</p>
         </div>
         <div class="box__answer">
-          <p class="box__answer-text">Wrong answer, it isn't a <span class="wrong-animal">Terrapin.</span></p>
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Terrapin.</span>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- ------------------ Question 5 ------------------ -->
+    <div class="question question--fifth">
+      <h2 class="question__title">What animal is this?</h2>
+      <img
+        src="images/pixelated-penguin.png"
+        alt="A pixelated picture of an animal, question 5"
+        class="question__image"
+      />
+    </div>
+
+    <!-- answer alternatives for question 5 -->
+    <div class="container">
+      <div class="box">
+        <div class="box__content">
+          <p class="box__content-text">Seagull</p>
+        </div>
+        <div class="box__answer">
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Seagull.</span>
+          </p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="box__content">
+          <p class="box__content-text">Crow</p>
+        </div>
+        <div class="box__answer">
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Crow.</span>
+          </p>
+        </div>
+      </div>
+
+      <div class="box box--correct">
+        <div class="box__content">
+          <p class="box__content-text">Penguin</p>
+        </div>
+        <div class="box__answer">
+          <p class="box__answer-text box__answer-text--correct">
+            Correct, this is the Galapagos Penguin. Penguins are threatened by
+            pollution, bycatch and climate change. Introduced species, such as
+            dogs, carry diseases that can spread to penguins as well, and cats
+            pose a threat as predators.
+          </p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="box__content">
+          <p class="box__content-text">Bear</p>
+        </div>
+        <div class="box__answer">
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Bear.</span>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- ------------------ Question 6 ------------------ -->
+    <div class="question question--sixth">
+      <h2 class="question__title">What animal is this?</h2>
+      <img
+        src="images/pixelated-chimpanzee.png"
+        alt="A pixelated picture of an animal, question 6"
+        class="question__image"
+      />
+    </div>
+
+    <!-- answer alternatives for question 6 -->
+    <div class="container">
+      <div class="box box--correct">
+        <div class="box__content">
+          <p class="box__content-text">Chimpanzee</p>
+        </div>
+        <div class="box__answer">
+          <p class="box__answer-text box__answer-text--correct">
+            Correct, this is the Chimpanzee.The main threats to chimpanzees are
+            habitat loss, disease, and hunting, especially for bushmeat. These
+            are exacerbated by chimps' slow reproductive rate—if an adult is
+            killed, it takes 14-15 years to replace him or her as a breeding
+            individual.
+          </p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="box__content">
+          <p class="box__content-text">Monkey</p>
+        </div>
+        <div class="box__answer">
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Monkey.</span>
+          </p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="box__content">
+          <p class="box__content-text">Orangutan</p>
+        </div>
+        <div class="box__answer">
+          <p class="box__answer-text">
+            Wrong answer, it isn't a
+            <span class="wrong-animal">Orangutan.</span>
+          </p>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="box__content">
+          <p class="box__content-text">Bonobos</p>
+        </div>
+        <div class="box__answer">
+          <p class="box__answer-text">
+            Wrong answer, it isn't a <span class="wrong-animal">Bonobos.</span>
+          </p>
         </div>
       </div>
     </div>
 
     <!-- ------------------ win screen ------------------ -->
     <div class="win-screen">
-      <h1 class="win-screen__heading">You Win &#127881</h1>
+      <h1 class="win-screen__heading">You Win &#x1F389;</h1>
       <p class="win-screen__message">
         You have answered all the questions correctly, congratulations!
       </p>
@@ -262,7 +413,7 @@
 
     <!-- ------------------ lose screen ------------------ -->
     <div class="lose-screen">
-      <h1 class="lose-screen__heading">You Lose &#128546</h1>
+      <h1 class="lose-screen__heading">You Lose &#x1F622;</h1>
       <p class="lose-screen__message">
         You have answered 3 question wrongs, do you wanna try again?
       </p>
