Added 2 more questions to make the game harder

--- a/index.html
+++ b/index.html
@@ -6,18 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Group 8, UN goal 15</title>
-    <meta name="description"
-    content="This is groups eights page for UNs goal number 15">
-    
-    <!-- Links and scripts -->
-    <link
-      rel="stylesheet"
-      href="./styles/style.css"
+    <meta
+      name="description"
+      content="This is groups eights page for UNs goal number 15"
     />
 
-    <link rel="icon"
-    href="./images/goal_15.png">
+    <!-- Links and scripts -->
+    <link rel="stylesheet" href="./styles/style.css" />
 
+    <link rel="icon" href="./images/goal_15.png" />
   </head>
 
   <body>
@@ -71,5 +68,4 @@
       </div>
     </main>
   </body>
-
 </html>
